--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ ul {
   position: sticky;
   top: 0;
   z-index: 20;
-  background: #ffffff;
+  background: #f3f4f6;
   border-bottom: 1px solid #e5e7eb;
 }
 
@@ -378,3 +378,13 @@ ul {
     flex-direction: column;
   }
 }
+
+#about {
+  background: #f3f4f6;
+}
+
+.section-contact {
+  background: #f3f4f6;
+}
+
+
