--- a/css/style.css
+++ b/css/style.css
@@ -380,11 +380,11 @@ ul {
 }
 
 #about {
-  background: #f3f4f6;
+  background: #f9fafb;
 }
 
 .section-contact {
-  background: #f3f4f6;
+  background: #f9fafb;
 }
 
 
