--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,6 @@ ul {
   justify-content: space-between;
 }
 
-/* 상단 메뉴 글씨 강조 */
-.nav-links a {
-  font-weight: 800;      /* ✔ 진하게 */
-}
-
 .logo {
   font-weight: 1000;
   font-size: 28px;
@@ -77,6 +72,7 @@ ul {
   display: flex;
   gap: 24px;
   font-size: 14px;
+  font-weight: 700;
 }
 
 .nav-links a {
