--- a/css/style.css
+++ b/css/style.css
@@ -524,8 +524,8 @@
 /* 이미지가 카드 영역을 꽉 채우도록 */
 .project-card img {
   width: 100%;
-  height: 170px;        /* 카드 높이 고정 */
-  object-fit: cover;    /* 이미지 잘려도 꽉 채우기 */
+  height: 210px;      /* ← 여기만 키움 */
+  object-fit: cover;
   display: block;
 }
 
